--- a/partials/panels/section-00.twig
+++ b/partials/panels/section-00.twig
@@ -103,7 +103,7 @@
                         {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
 
                         {% if adslots[0] is defined %}
-                            <div class="col-12 col-xl-3 d-none d-xl-block">
+                            <div class="col-12 col-xl-3">
                                 <div class="j-adslot" id="{{adslots[0]}}" data-adshape="mrec"></div>
                             </div>
                         {% endif %}
