--- a/partials/panels/section-07.twig
+++ b/partials/panels/section-07.twig
@@ -58,7 +58,7 @@
                     {% endfor %}
 
                     {% if adslots[0] is defined %}
-                        <div class="d-none d-xl-block mt-2">
+                        <div class="mt-2">
                             <div class="j-adslot" id="{{adslots[0]}}" data-adshape="mrec"></div>
                         </div>
                     {% endif %}
