--- a/article.twig
+++ b/article.twig
@@ -8,8 +8,8 @@
 {% set config = _Network.getThemeConfig() %}
 
 {% set themeColor = "#4A90E2" %}
-{% if networkData['styling']['colours']['headingColor'] is defined %}
-    {% set themeColor = networkData['styling']['colours']['headingColor'] %}
+{% if networkData['styling']['colours']['primaryColor'] is defined %}
+    {% set themeColor = networkData['styling']['colours']['primaryColor'] %}
 {% endif %}
 
 {% set relatedArticles = [] %}
@@ -257,25 +257,127 @@
                     <div class="col-12 col-lg-1">
                         <div class="u-generic-socialIcons u-generic-socialIcons--sticky u-generic-socialIcons-xs">
                             <a class="u-generic-socialIcons__item"
-                                href="mailto:?subject=Check%20out%20this%20article&body={{article.url}}" target="_blank"><img
-                                    src="{{networkData.templatePath}}/static/icons/icons-socials-email-reverse-circle.svg" />
+                                href="mailto:?subject=Check%20out%20this%20article&body={{article.url}}" target="_blank">
+                                <svg width="32" height="32" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                    <defs>
+                                        <path id="a" d="M0 .443h32.4v32.4H0z"/>
+                                        <path d="m.067 12.133 5.678-5.506L.05 1.715 0 2.037v9.757c0 .068.022.18.067.339zm6.4-6.166.757.61 1.495 1.236 1.495-1.236.756-.61 5.712-4.93a.944.944 0 0 0-.302-.05H1.042a.719.719 0 0 0-.286.05l5.712 4.93zm-5.425 6.877H16.38a.8.8 0 0 0 .285-.05l-5.728-5.54-2.218 1.813-2.218-1.813-5.728 5.54c.09.033.179.05.269.05zm16.329-.711c.033-.124.05-.237.05-.339V2.037c0-.113-.017-.22-.05-.322l-5.678 4.912 5.678 5.506z" id="c"/>
+                                    </defs>
+                                    <g fill="none" fill-rule="evenodd">
+                                        <g>
+                                            <mask id="b" fill="#fff">
+                                                <use xlink:href="#a"/>
+                                            </mask>
+                                            <use fill={{themeColor}} xlink:href="#a"/>
+                                            <g mask="url(#b)" fill={{themeColor}}>
+                                                <rect width="108" height="108" rx="8.1" transform="translate(-11 -31)"/>
+                                            </g>
+                                        </g>
+                                        <g transform="translate(7.11 8.65)">
+                                            <mask id="d" fill="#fff">
+                                                <use xlink:href="#c"/>
+                                            </mask>
+                                            <use fill="#000" xlink:href="#c"/>
+                                            <g mask="url(#d)" fill="#FFF">
+                                                <rect x="1" width="87.998" height="87.998" rx="6.6" transform="translate(-36 -40)"/>
+                                            </g>
+                                        </g>
+                                    </g>
+                                </svg>
+
                             </a>
                             <a class="u-generic-socialIcons__item"
                                 href="https://www.facebook.com/sharer/sharer.php?u={{article.url}}&title={{ article.title|url_encode }}"
                                 target="_blank">
-                                <img
-                                    src="{{networkData.templatePath}}/static/icons/icons-socials-facebook-reverse-circle.svg" />
+                                <svg width="32" height="32" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                    <defs>
+                                        <path id="fb_a" d="M0 .443h32.4v32.4H0z"/>
+                                        <path d="M5.476 5.791v-1.5c0-.226.013-.403.04-.53a.986.986 0 0 1 .152-.36.648.648 0 0 1 .366-.248c.165-.05.39-.075.672-.075h1.518V.08h-2.44c-1.41 0-2.422.328-3.036.986-.615.658-.922 1.633-.922 2.922v1.803H0V8.79h1.826v8.73h3.65V8.79h2.44l.328-2.999H5.476z" id="fb_c"/>
+                                    </defs>
+                                    <g fill="none" fill-rule="evenodd">
+                                        <g>
+                                            <mask id="fb_b" fill="#fff">
+                                                <use xlink:href="#fb_a"/>
+                                            </mask>
+                                            <use fill={{themeColor}} xlink:href="#fb_a"/>
+                                            <g mask="url(#fb_b)" fill={{themeColor}}>
+                                                <rect width="108" height="108" rx="8.1" transform="translate(-11 -31)"/>
+                                            </g>
+                                        </g>
+                                        <g transform="translate(11.4 7)">
+                                            <mask id="fb_d" fill="#fff">
+                                                <use xlink:href="#fb_c"/>
+                                            </mask>
+                                            <g mask="url(#fb_d)" fill="#FFF">
+                                                <rect y="1" width="87.998" height="87.998" rx="6.6" transform="translate(-44 -36)"/>
+                                            </g>
+                                        </g>
+                                    </g>
+                                </svg>
+
                             </a>
                             <a class="u-generic-socialIcons__item"
                                 href="https://twitter.com/share?text={{ article.title|url_encode }}&url={{article.url}}"
                                 target="_blank">
-                                <img
-                                    src="{{networkData.templatePath}}/static/icons/icons-socials-twitter-reverse-circle.svg" />
+                                <svg width="32" height="32" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                    <defs>
+                                        <path id="tweet_a" d="M0 .443h32.4v32.4H0z"/>
+                                        <path d="M16.6 2.237a6.772 6.772 0 0 1-1.96.56C15.37 2.33 15.866 1.67 16.13.816a6.38 6.38 0 0 1-2.148.881c-.679-.76-1.507-1.14-2.488-1.14-.941 0-1.746.353-2.41 1.059-.667.708-1 1.56-1 2.562 0 .266.026.54.077.82a9.007 9.007 0 0 1-3.901-1.12 9.938 9.938 0 0 1-3.09-2.662A3.63 3.63 0 0 0 .7 3.017a3.649 3.649 0 0 0 1.526 3.021 3.278 3.278 0 0 1-1.526-.46v.04C.685 6.5.943 7.266 1.47 7.92c.527.653 1.18 1.068 1.96 1.24a3.305 3.305 0 0 1-1.527.06c.227.72.628 1.314 1.206 1.782a3.16 3.16 0 0 0 1.978.72C3.857 12.75 2.45 13.263.868 13.263c-.302 0-.578-.014-.829-.041 1.582 1.08 3.322 1.62 5.219 1.62a8.928 8.928 0 0 0 3.391-.599c1.056-.413 1.96-.954 2.713-1.62.754-.667 1.4-1.448 1.94-2.342a10.92 10.92 0 0 0 1.603-5.683c0-.2-.007-.353-.02-.46a7.075 7.075 0 0 0 1.696-1.861l.019-.04z" id="tweet_c"/>
+                                    </defs>
+                                    <g fill="none" fill-rule="evenodd">
+                                        <g>
+                                            <mask id="tweet_b" fill="#fff">
+                                                <use xlink:href="#tweet_a"/>
+                                            </mask>
+                                            <use fill={{themeColor}} xlink:href="#tweet_a"/>
+                                            <g mask="url(#tweet_b)" fill={{themeColor}}>
+                                                <rect width="108" height="108" rx="8.1" transform="translate(-11 -31)"/>
+                                            </g>
+                                        </g>
+                                        <g transform="translate(7.45 8.1)">
+                                            <mask id="tweet_d" fill="#fff">
+                                                <use xlink:href="#tweet_c"/>
+                                            </mask>
+                                            <g mask="url(#tweet_d)" fill="#FFF">
+                                                <rect x="1" y="1" width="87.998" height="87.998" rx="6.6" transform="translate(-28 -37)"/>
+                                            </g>
+                                        </g>
+                                    </g>
+                                </svg>
+
+
                             </a>
                             <a class="u-generic-socialIcons__item" href="https://linkedin.com/share?text={{ article.title|url_encode }}&url={{article.url}}"
                                 target="_blank">
-                                <img
-                                    src="{{networkData.templatePath}}/static/icons/icons-socials-linkedin-reverse-circle.svg" />
+                                <svg width="32" height="32" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                    <defs>
+                                        <path id="link_a" d="M0 .443h32.4v32.4H0z"/>
+                                        <path d="M.595 15.4h3.436V5.064H.595V15.4zM2.336.082C1.16.082.391.852.391 1.867c0 .992.747 1.787 1.9 1.787h.022c1.2 0 1.944-.795 1.944-1.787C4.235.853 3.512.082 2.337.082zm14.086 9.391V15.4h-3.436V9.87c0-1.389-.497-2.337-1.74-2.337-.95 0-1.515.639-1.764 1.257-.09.22-.114.528-.114.838V15.4H5.931s.047-9.366 0-10.336h3.437v1.465l-.023.033h.023V6.53c.457-.703 1.272-1.708 3.097-1.708 2.262 0 3.957 1.477 3.957 4.652z" id="link_c"/>
+                                    </defs>
+                                    <g fill="none" fill-rule="evenodd">
+                                        <g>
+                                            <mask id="link_b" fill="#fff">
+                                                <use xlink:href="#link_a"/>
+                                            </mask>
+                                            <use fill={{themeColor}} xlink:href="#link_a"/>
+                                            <g mask="url(#link_b)" fill={{themeColor}}>
+                                                <rect width="108" height="108" rx="8.1" transform="translate(-11 -31)"/>
+                                            </g>
+                                        </g>
+                                        <g transform="translate(7.385 8.1)">
+                                            <mask id="link_d" fill="#fff">
+                                                <use xlink:href="#link_c"/>
+                                            </mask>
+                                            <use fill="#000" xlink:href="#link_c"/>
+                                            <g mask="url(#link_d)" fill="#FFF">
+                                                <rect width="87.998" height="87.998" rx="6.6" transform="translate(-31 -29)"/>
+                                            </g>
+                                        </g>
+                                    </g>
+                                </svg>
+
+
+
                             </a>
                         </div>
                     </div>
