--- a/partials/panels/section-04.twig
+++ b/partials/panels/section-04.twig
@@ -70,7 +70,7 @@
     </div>
     {% if adslots[0] is defined %}
     <div class="col-12 col-xl-3">
-        <div class="j-adslot" id="{{adslots[0]}}" data-adshape="mrec"></div>
+        <div class="j-adslot" id="{{adslots[0]}}" data-adshape="hpage"></div>
     </div>
     {% endif %}
 </div>
