--- a/section.twig
+++ b/section.twig
@@ -94,9 +94,9 @@
                                             }) | raw}}
                                             {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
                                         </div>
-                                        {% if config['inventory']['adSpace']['banner'][2] is defined %}
+                                        {% if config['inventory']['adSpace']['mrec'][1] is defined %}
                                             <div class="mt-4">
-                                                <div class="j-adslot" id="{{config['inventory']['adSpace']['banner'][2]}}" data-adshape="banner"></div>
+                                                <div class="j-adslot" id="{{config['inventory']['adSpace']['mrec'][1]}}" data-adshape="mrec"></div>
                                             </div>
                                         {% endif %}
                                     </div>
