--- a/static/sass/main.scss
+++ b/static/sass/main.scss
@@ -98,6 +98,7 @@
 @import "component.spinner-modal";
 @import "component.lightbox-modal";
 @import "component.subscription";
+@import "component.directory";
 
 //Cards
 @import "card";
