--- a/static/sass/pages/classifieds/_component.classified-search.scss
+++ b/static/sass/pages/classifieds/_component.classified-search.scss
@@ -56,6 +56,7 @@
             }
             .form-control {
                 @include padding-right(35);
+                width: 100%;
             }
         }
         &--select {
