--- a/layout-classifieds.twig
+++ b/layout-classifieds.twig
@@ -379,7 +379,7 @@
                             
                             var cardRenderer = new Card(data);
 
-                            var article = cardRenderer.render(data, {
+                            var article = cardRenderer.render({
                                 cardClass : "acme-card-10-mobile acme-card-10-tablet acme-card-10-desktop",
                                 type : "acme-",
                                 content: "full",
