--- a/layout-classifieds.twig
+++ b/layout-classifieds.twig
@@ -384,7 +384,7 @@
                                 type : "acme-",
                                 content: "full",
                                 imageWidth: 540,
-                                imageHeight: 0,
+                                imageHeight: 350,
                             });
 
                             Acme.LightBox.renderPreLayout(article);
@@ -424,7 +424,7 @@
             failText        : '<h2 style="font-size:24px;margin-top:25px;color:#0e215d;font-weight:400;">Sorry, we couldn\'t find what you\'re looking for.</h2>',
             after           : '</div>',
             cardType        : "acme-",
-            card_class      : 'acme-col-12 acme-col-md-12 acme-col-lg-4 acme-card-1-mobile acme-card-1-tablet acme-card-1-desktop',
+            card_class      : 'acme-card-1-mobile acme-card-1-tablet acme-card-1-desktop acme-col-12 acme-col-md-12 acme-col-lg-4',
             lightbox        : "{{contentType}}"
         }); 
 
@@ -601,7 +601,7 @@
                 cardType        : "acme-",
                 lightbox        : "{{contentType}}",
                 name            : 'section-load', //name of the search button
-                card_class      : 'col-12 acme-col-lg-4 acme-card-1-mobile acme-card-1-tablet acme-card-1-desktop',
+                card_class      : 'acme-card-1-mobile acme-card-1-tablet acme-card-1-desktop col-12 acme-col-lg-4',
                 non_pinned      : {{articleCount}}
             };
 
