--- a/static/sass/cards/_card.scss
+++ b/static/sass/cards/_card.scss
@@ -136,6 +136,7 @@
             margin-top: 12px;
             @include font-size(14);
             max-height: 55px;
+            color: $grey5;
         }
 
         &__time {
