--- a/static/sass/cards/_acme-card-1.scss
+++ b/static/sass/cards/_acme-card-1.scss
@@ -19,35 +19,37 @@
             padding: 15px 10px 15px 20px;
         }
 
-        &__category {
-            @include font-size(11);
-            margin-bottom: 5px;
-            order: 1;
-            flex-grow:0;
-            margin-top: 15px;
-        }
-
-        &__heading {
-            @include font-size(18);
-            @include flex-height(81px);
-            order: 2;
-        }
-        &__description {
-            display: none;
-            margin-top: 5px;
-            order: 3;
-            // @include flex-height(40px);
-        }
-
-        &__author {
-            display:none;
-            // order: 2;
-            // margin-bottom: 20px;
-        }
-        &__time {
-            @include font-size(15);
-            font-weight: $weightMedium;
-            display:none;
+        .c-cards-view {
+            &__category {
+                @include font-size(11);
+                margin-bottom: 5px;
+                order: 1;
+                flex-grow:0;
+                margin-top: 15px;
+            }
+    
+            &__heading {
+                @include font-size(18);
+                @include flex-height(81px);
+                order: 2;
+            }
+            &__description {
+                display: none;
+                margin-top: 5px;
+                order: 3;
+                // @include flex-height(40px);
+            }
+    
+            &__author {
+                display:none;
+                // order: 2;
+                // margin-bottom: 20px;
+            }
+            &__time {
+                @include font-size(15);
+                font-weight: $weightMedium;
+                display:none;
+            }
         }
 
         &.video {
@@ -62,26 +64,26 @@
                     width: 100%;
                     padding: 15px 15px 15px 20px;
                 }
+                .c-cards-view {
+                    &__category {
+                        margin-bottom:8px;
+                    }
 
-                &__category {
-                    margin-bottom:8px;
+                    &__description {
+                        margin-bottom: 15px;
+                        display: block;
+                        @include flex-height(50px);
+                        overflow: hidden;
+                    }
+                    &__heading{
+                        @include flex-height(54px);
+                    }
+
+                    &__author {
+                        display:none;
+                        // margin-bottom:10px;
+                    }    
                 }
-
-                &__description {
-                    margin-bottom: 15px;
-                    display: block;
-                    @include flex-height(50px);
-                    overflow: hidden;
-                }
-                &__heading{
-                    @include flex-height(54px);
-                }
-
-                &__author {
-                    display:none;
-                    // margin-bottom:10px;
-                }    
-
             }
         }
     }
@@ -136,35 +138,39 @@
                 max-width:100%;
                 // @include flex-width(167px);
             }   
-            &__heading {
-                @include font-size(22);
-                @include flex-height(66px);
-            }
+            .c-cards-view {
+                &__heading {
+                    @include font-size(22);
+                    @include flex-height(66px);
+                }
 
-            &__description {
+                &__description {
+                        display:none;
+                }
+
+                &__author {
                     display:none;
-            }
+                }
 
-            &__author {
-                display:none;
             }
 
 
             &.without-image {
                 .acme-c-cards-view {
-                    
-                    &__heading {
-                        margin-bottom:20px;
-                    }
+                    .c-cards-view {
+                        &__heading {
+                            margin-bottom:20px;
+                        }
         
 
-                    &__description {
-                        display:block;
-                        @include flex-height(90px);
-                    }
-        
-                    &__author {
-                        display:none;
+                        &__description {
+                            display:block;
+                            @include flex-height(90px);
+                        }
+            
+                        &__author {
+                            display:none;
+                        }
                     }
         
                 }
