--- a/static/sass/cards/_acme-card-1.scss
+++ b/static/sass/cards/_acme-card-1.scss
@@ -7,6 +7,8 @@
         
         &__media {
             @include flex-width(143px);
+            overflow: hidden;
+
             img {
                 height:100%;
             }
@@ -17,6 +19,37 @@
             @include flexbox();
             @include flex-direction(column, vertical);
             padding: 15px 10px 15px 20px;
+        }
+
+        &__category {
+            @include font-size(11);
+            margin-bottom: 5px;
+            order: 1;
+            flex-grow:0;
+            margin-top: 15px;
+        }
+
+        &__heading {
+            @include font-size(18);
+            @include flex-height(81px);
+            order: 2;
+        }
+        &__description {
+            display: none;
+            margin-top: 5px;
+            order: 3;
+            // @include flex-height(40px);
+        }
+
+        &__author {
+            display:none;
+            // order: 2;
+            // margin-bottom: 20px;
+        }
+        &__time {
+            @include font-size(15);
+            font-weight: $weightMedium;
+            display:none;
         }
 
         .c-cards-view {
@@ -64,6 +97,26 @@
                     width: 100%;
                     padding: 15px 15px 15px 20px;
                 }
+
+                &__category {
+                    margin-bottom:8px;
+                }
+
+                &__description {
+                    margin-bottom: 15px;
+                    display: block;
+                    @include flex-height(50px);
+                    overflow: hidden;
+                }
+                &__heading{
+                    @include flex-height(54px);
+                }
+
+                &__author {
+                    display:none;
+                    // margin-bottom:10px;
+                }  
+
                 .c-cards-view {
                     &__category {
                         margin-bottom:8px;
@@ -137,7 +190,21 @@
                 min-width:100%;
                 max-width:100%;
                 // @include flex-width(167px);
-            }   
+            }  
+            
+            &__heading {
+                @include font-size(22);
+                @include flex-height(66px);
+            }
+
+            &__description {
+                    display:none;
+            }
+
+            &__author {
+                display:none;
+            }
+
             .c-cards-view {
                 &__heading {
                     @include font-size(22);
@@ -157,6 +224,20 @@
 
             &.without-image {
                 .acme-c-cards-view {
+                    &__heading {
+                        margin-bottom:20px;
+                    }
+    
+
+                    &__description {
+                        display:block;
+                        @include flex-height(90px);
+                    }
+        
+                    &__author {
+                        display:none;
+                    }
+                    
                     .c-cards-view {
                         &__heading {
                             margin-bottom:20px;
