content issue fixes

--- a/partials/_section-loadmore.twig
+++ b/partials/_section-loadmore.twig
@@ -78,7 +78,7 @@
 
                             var article = cardController.renderCard(data, {
                                 cardClass : "acme-card-10-mobile acme-card-10-tablet acme-card-10-desktop",
-                                type : "acme-",
+                                type : "maya-",
                                 content: "full",
                                 imageOriginal: true
                             });
