--- a/static/sass/cards/_acme-card-10.scss
+++ b/static/sass/cards/_acme-card-10.scss
@@ -36,6 +36,7 @@
         &__description {
             margin-top: 5px;
             order: 4;
+            display: none;
             // @include flex-height(40px);
         }
         &__articleContent {
@@ -48,23 +49,37 @@
             a {
                 color: $greyish !important;
                 font-family: $primaryFont !important;
-                @include font-size(17);
+                @include font-size(16);
 
                 // font-size: 17px !important;
                 line-height: 1.59 !important;
-                letter-spacing: 0.5px !important;
-                margin-bottom: 20px !important;
+                margin-bottom: 10px !important;
                 word-wrap: break-word;
     
                 * {
                     line-height: 1.5 !important;
-                    letter-spacing: 1px !important;
                     font-family: $primaryFont !important;
                     word-wrap: break-word;
                     margin-bottom: 0px !important;
                 }
             }
-    
+            figure {
+                position: relative;
+                @include inline-flex;
+                margin-bottom: 10px !important;
+                figcaption {
+                  position: absolute;
+                  left: 0;
+                  bottom: 0;
+                  width: 100%;
+                  background-color: $black;
+                  color: $white;
+                  font-size: 12px;
+                  font-weight: 500;
+                  line-height: 1.33;
+                  padding: 10px;
+                }
+              }
             a {
                 border-bottom: 1px solid $blue;
                 @include transition(all 0.3s ease);
@@ -112,6 +127,7 @@
                     display: block;
                     max-height: 90px;
                     overflow: hidden;
+                    display: none;
                 }
 
                 &__author {
@@ -122,8 +138,10 @@
         }
     }
 
-    .c-cards-view__author {
-        display: none;
+    .c-cards-view {
+        &__author,&__description {
+            display: none;
+        }
     }
 }
 
