scope global variables in my account page

--- a/static/sass/pages/myaccount/_my-account.scss
+++ b/static/sass/pages/myaccount/_my-account.scss
@@ -87,7 +87,12 @@
 
 .managed-user {
 
-
+    $blue_sh5: #5748f6;
+    $grey3: #f6f5f5;
+    $grey4: #c0c0c0;
+    $grey5: #636567;
+    $black: #000000;
+    $white: #ffffff;
 
     &__item {
         border-bottom: 1px solid $grey4;
@@ -144,6 +149,16 @@
 
 
 .managed-users {
+
+
+    $blue_sh5: #5748f6;
+    $grey3: #f6f5f5;
+    $grey4: #c0c0c0;
+    $grey5: #636567;
+    $black: #000000;
+    $white: #ffffff;
+
+
     background-color: $grey3;
     margin-bottom: 25px;
     padding: 16px 0;
@@ -275,6 +290,15 @@
 
 
 .plan-table {
+
+    $blue_sh5: #5748f6;
+    $grey3: #f6f5f5;
+    $grey4: #c0c0c0;
+    $grey5: #636567;
+    $black: #000000;
+    $white: #ffffff;
+
+
     margin-bottom: 80px;
     
     &__table {
@@ -450,6 +474,17 @@
 
 
 .infoBox-form {
+
+
+    $blue_sh5: #5748f6;
+    $grey3: #f6f5f5;
+    $grey4: #c0c0c0;
+    $grey5: #636567;
+    $black: #000000;
+    $white: #ffffff;
+
+
+
     form {
         width:100%;
     }
@@ -509,6 +544,20 @@
 
 
 .planInfo {
+
+
+    $blue_sh5: #5748f6;
+    $grey3: #f6f5f5;
+    $grey4: #c0c0c0;
+    $grey5: #636567;
+    $black: #000000;
+    $white: #ffffff;
+
+
+
+
+
+
     &__top {
 
         &-container {
@@ -677,3 +726,154 @@
         background-color: rgba($white, 0.2);
     }
 }
+
+
+
+
+.infoBox {
+  
+
+    $blue_sh5: #5748f6;
+    $grey3: #f6f5f5;
+    $grey4: #c0c0c0;
+    $grey5: #636567;
+    $black: #000000;
+    $white: #ffffff;
+
+
+
+    &__head {
+      display: flex;
+      flex-direction: column;
+      margin-bottom: 15px;
+
+      &-label {
+        color: $black;
+        font-size: 26px;
+        line-height: 1.23;
+        font-family: $primaryFont;
+        font-weight: 700;
+      }
+
+      &-link {
+        color: $blue_sh5;
+        line-height: 1.33;
+        font-family: $primaryFont;
+        font-weight: 700;
+        font-size: 12px;
+        margin-top: 3px;
+      }
+    }
+
+    &-dataGrid {
+      // margin-bottom: 40px;
+      &-item {
+        @include flexbox;
+        @include flex-direction(column, vertical);
+        margin-bottom: 12px;
+
+        &--label {
+          color: #636567;
+          @include font-size(14);
+          line-height: 1.71;
+          font-family: $primaryFont;
+        }
+
+        &--value {
+          color: #000;
+          @include font-size(18);
+          line-height: 1.78;
+          font-family: $primaryFont;
+        }
+      }
+    }
+
+    &-form {
+    //   #{$selfCusAcnt} {
+        &__form {
+          &__label {
+            color: #636567;
+            @include font-size(16);
+            line-height: 1.5;
+            font-family: $primaryFont;
+            margin-bottom: 8px;
+          }
+
+          &__input {
+            height: 48px;
+            padding: 20px;
+            outline: none;
+            border: none;
+          }
+
+          &__group {
+            display: flex;
+            flex-direction: column;
+            margin-bottom: 20px;
+
+            &__help-block {
+              display: none;
+            }
+
+            .three-column {
+              background: #ffffff; 
+              padding: 15px;
+            }
+
+            &.has-error {
+              position: relative;
+              &:after {
+                content: "";
+                background-image: url("../icons/icons-warning.svg");
+                width: 17px;
+                height: 17px;
+                position: absolute;
+                right: 15px;
+                bottom: 30px;
+              }
+            //   #{$selfCusAcnt}__form {
+                &__help-block {
+                  display: block;
+                  color: #c40000;
+                  font-family: $primaryFont;
+                  font-weight: $weightMedium;
+                  font-size: 12px;
+                  font-style: italic;
+                  margin-top: 5px;
+                }
+              }
+            // }
+          }
+
+          &__btns {
+            display: flex;
+            flex-direction: row;
+            // #{$selfCusAcnt} {
+              &__btn {
+                flex: 1;
+              }
+            // }
+            @media screen and (max-width: 540px) {
+              flex-direction: column;
+
+              .cus_acnt__btn + .cus_acnt__btn {
+                margin-left: 0;
+                margin-top: 20px;
+              }
+            }
+          }
+        }
+    //   }
+    }
+
+    @include responsive(xs) {
+      @include respond-to(md) {
+        .infoBox {
+          &__head {
+            flex-direction: row;
+            justify-content: space-between;
+          }
+        }
+      }
+    }
+  }
