my account load more button

--- a/static/sass/pages/myaccount/_my-account.scss
+++ b/static/sass/pages/myaccount/_my-account.scss
@@ -247,7 +247,12 @@
     }
 
 
-
+    &__more {
+        @include font-size(13);
+        text-align: center;
+        display: block;
+        text-decoration: underline;
+    }
 
     &__addition {
         display: flex;
