fix load more on directory

--- a/partials/_section-loadmore.twig
+++ b/partials/_section-loadmore.twig
@@ -99,13 +99,12 @@
                 }
             });
         }
-        var cardController = new Card();
 
 
 
 
         var params = {
-            model           : cardController,
+            model           : Acme.Card,
             container       : 'loadmore_section_{{sectionNumber}}',
             offset          : 0,
             limit           : {{ limit }},
