--- a/article.twig
+++ b/article.twig
@@ -416,24 +416,72 @@
                                                 <div class="u-generic-socialIcons mb-3 mb-xl-5 justify-content-end">
                                                     <div class="u-generic-socialIcons-text">Share article</div>
                                                     <a class="u-generic-socialIcons__item"
-                                                        href="mailto:?subject=Check%20out%20this%20article&body={{article.url}}" target="_blank"><img
-                                                            src="{{networkData.templatePath}}/static/icons/icons-socials-email-solid.svg" />
+                                                        href="mailto:?subject=Check%20out%20this%20article&body={{article.url}}" target="_blank">
+                                                        <svg width="20" height="21" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                                            <defs>
+                                                                <path d="M.076 12.788 6.53 6.53.057.95 0 1.315v11.088c0 .077.025.205.076.385zM7.35 5.78l.86.693 1.698 1.405 1.7-1.405.858-.693L18.957.179a1.073 1.073 0 0 0-.343-.058H1.184A.817.817 0 0 0 .859.18L7.35 5.78zm-6.166 7.815h17.43a.91.91 0 0 0 .324-.058l-6.51-6.294-2.52 2.06-2.52-2.06-6.51 6.294a.858.858 0 0 0 .306.058zm18.556-.808c.038-.142.057-.27.057-.385V1.315c0-.129-.019-.25-.057-.366L13.287 6.53l6.453 6.257z" id="email_solid_a"/>
+                                                            </defs>
+                                                            <g transform="translate(.125 3.875)" fill="none" fill-rule="evenodd">
+                                                                <mask id="email_solid_b" fill="#fff">
+                                                                    <use xlink:href="#email_solid_a"/>
+                                                                </mask>
+                                                                <use fill="#000" xlink:href="#email_solid_a"/>
+                                                                <g mask="url(#email_solid_b)" fill="{{themeColor}}">
+                                                                    <rect width="100" height="100" rx="7.5" transform="translate(-40 -46)"/>
+                                                                </g>
+                                                            </g>
+                                                        </svg>
+
                                                     </a>
                                                     <a class="u-generic-socialIcons__item"
                                                         href="https://www.facebook.com/sharer/sharer.php?u={{article.url}}&title={{ article.title|url_encode }}"
                                                         target="_blank">
-                                                        <img
-                                                            src="{{networkData.templatePath}}/static/icons/icons-socials-facebook-solid.svg" />
+                                                        <svg width="20" height="21" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                                            <defs>
+                                                                <path d="M6.223 6.581V4.877c0-.257.014-.459.044-.604a1.12 1.12 0 0 1 .174-.409.736.736 0 0 1 .416-.28c.188-.057.444-.087.763-.087h1.726V.091H6.572c-1.6 0-2.75.373-3.45 1.12-.698.748-1.047 1.856-1.047 3.321v2.05H0v3.406h2.075v9.921h4.148V9.99h2.773l.372-3.408H6.223z" id="fb_solid_a"/>
+                                                            </defs>
+                                                            <g transform="translate(5 1)" fill="none" fill-rule="evenodd">
+                                                                <mask id="fb_solid_b" fill="#fff">
+                                                                    <use xlink:href="#fb_solid_a"/>
+                                                                </mask>
+                                                                <g mask="url(#fb_solid_b)" fill="{{themeColor}}">
+                                                                    <rect width="100" height="100" rx="7.5" transform="translate(-50 -40)"/>
+                                                                </g>
+                                                            </g>
+                                                        </svg>
                                                     </a>
                                                     <a class="u-generic-socialIcons__item"
                                                         href="https://twitter.com/share?text={{ article.title|url_encode }}&url={{article.url}}"
                                                         target="_blank">
-                                                        <img
-                                                            src="{{networkData.templatePath}}/static/icons/icons-socials-twitter-solid.svg" />
+                                                        <svg width="20" height="21" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                                            <defs>
+                                                                <path d="M19 2.542a7.696 7.696 0 0 1-2.226.636c.827-.53 1.39-1.28 1.691-2.251a7.25 7.25 0 0 1-2.441 1.002c-.771-.865-1.713-1.297-2.827-1.297-1.07 0-1.984.402-2.74 1.204-.757.805-1.135 1.774-1.135 2.912 0 .303.03.613.087.932a10.236 10.236 0 0 1-4.433-1.274 11.293 11.293 0 0 1-3.51-3.024A4.126 4.126 0 0 0 .93 3.429a4.147 4.147 0 0 0 1.735 3.433A3.725 3.725 0 0 1 .93 6.339v.045C.915 7.386 1.208 8.257 1.808 9c.599.743 1.341 1.214 2.226 1.41a3.756 3.756 0 0 1-1.734.067 4.14 4.14 0 0 0 1.37 2.025c.657.53 1.407.803 2.248.819-1.399 1.167-2.997 1.751-4.796 1.751a8.81 8.81 0 0 1-.941-.047c1.798 1.229 3.774 1.842 5.93 1.842 1.37.016 2.655-.212 3.854-.681 1.2-.47 2.227-1.085 3.083-1.842a11.38 11.38 0 0 0 2.205-2.66 12.409 12.409 0 0 0 1.37-3.162c.3-1.09.45-2.19.45-3.297 0-.228-.007-.401-.022-.522a8.04 8.04 0 0 0 1.928-2.116L19 2.542z" id="tweet_solid_a"/>
+                                                            </defs>
+                                                            <g transform="translate(.375 2.25)" fill="none" fill-rule="evenodd">
+                                                                <mask id="tweet_solid_b" fill="#fff">
+                                                                    <use xlink:href="#tweet_solid_a"/>
+                                                                </mask>
+                                                                <g mask="url(#tweet_solid_b)" fill="{{themeColor}}">
+                                                                    <rect width="100" height="100" rx="7.5" transform="translate(-31 -41)"/>
+                                                                </g>
+                                                            </g>
+                                                        </svg>
                                                     </a>
                                                     <a class="u-generic-socialIcons__item" href="https://linkedin.com/share?text={{ article.title|url_encode }}&url={{article.url}}" target="_blank">
-                                                        <img
-                                                            src="{{networkData.templatePath}}/static/icons/icons-socials-linkedin-solid.svg" />
+                                                        <svg width="20" height="21" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                                            <defs>
+                                                                <path d="M.677 17.5H4.58V5.755H.677V17.5zM2.655.093C1.319.093.445.969.445 2.122c0 1.127.848 2.03 2.158 2.03h.026c1.362 0 2.21-.903 2.21-2.03C4.811.969 3.99.092 2.654.092zM18.66 10.765V17.5h-3.904v-6.284c0-1.578-.565-2.656-1.978-2.656-1.079 0-1.72.726-2.003 1.429-.103.25-.13.6-.13.952V17.5H6.74s.053-10.643 0-11.745h3.906V7.42l-.026.037h.026V7.42c.519-.8 1.445-1.941 3.52-1.941 2.569 0 4.495 1.678 4.495 5.286z" id="link_solid_a"/>
+                                                            </defs>
+                                                            <g transform="translate(.438 2.25)" fill="none" fill-rule="evenodd">
+                                                                <mask id="link_solid_b" fill="#fff">
+                                                                    <use xlink:href="#link_solid_a"/>
+                                                                </mask>
+                                                                <use fill="#000" xlink:href="#link_solid_a"/>
+                                                                <g mask="url(#link_solid_b)" fill="{{themeColor}}">
+                                                                    <rect width="100" height="100" rx="7.5" transform="translate(-35 -33)"/>
+                                                                </g>
+                                                            </g>
+                                                        </svg>
                                                     </a>
                                                 </div>
                                             {% endif %}
