--- a/partials/_single-event.twig
+++ b/partials/_single-event.twig
@@ -72,6 +72,10 @@
 
 {% set venue            = event.venue %}
 
+{% set themeColor   = "#4A90E2" %}
+{% if networkData['styling']['colours']['primaryColor'] is defined %}
+    {% set themeColor = networkData['styling']['colours']['primaryColor'] %}
+{% endif %}
 
 <div class="{{containerClass}}" data-title="{{ eventTitle | raw }}">
     {% set eventImgSmall = _Media.getMediaUrl(event.media[0], 500, 500, {'crop': 'fill', 'gravity': 'faces'} ) %}
@@ -134,7 +138,7 @@
                             <div class="c-eventcards-view__time">{{ startDayName }}{{startTime}}{% if event.endDate != "" %} - {{endTime}}{% endif %}</div>
                         {% endif %}
                         <div class="c-eventcards-view__author">
-                            <div class="c-eventcards-view__icon--pin">{{ this.render('icons.twig', {icon: 'dateCal'} ) | raw }}</div>
+                            <svg class='o-icons__main' width='23' height='15'><g><title>Layer 1</title> <rect id='svg_11' height='5' width='5' y='0.94253' x='1.05747' stroke-width='0' stroke='#000' fill={{themeColor}} /> <rect id='svg_9' height='5' width='5' y='9' x='1.11494' stroke-width='0' stroke='#000' fill={{themeColor}} /> <rect id='svg_12' height='5' width='5' y='1' x='9' stroke-width='0' stroke='#000' fill={{themeColor}} /> <rect id='svg_10' height='5' width='5' y='9' x='9.05747' stroke-width='0' stroke='#000' fill={{themeColor}} /> <rect id='svg_13' height='5' width='5' y='1.05747' x='17' stroke-width='0' stroke='#000' fill={{themeColor}} /> <rect id='svg_8' height='5' width='5' y='9' x='17' stroke-width='0' stroke='#000' fill={{themeColor}} /> </g> </svg>
                         </div>
                     </div>
                     
