change devices image on subscribe page

--- a/layout-subscribe.twig
+++ b/layout-subscribe.twig
@@ -341,7 +341,7 @@
                                                 {% if blogScreen %}
                                                     <img src="{{screenImg}}" srcset="{{screenImgMedium}} 1x, {{screenImg}} 2x" class="img-fluid">
                                                 {% else %}
-                                                    <img src="{{networkData.templatePath}}/static/icons/laptop_3.png?ver=3" srcset="{{networkData.templatePath}}/static/icons/laptop_3.png?ver=3 1x, {{networkData.templatePath}}/static/icons/laptop_3@2x.png?ver=3 2x, {{networkData.templatePath}}/static/icons/laptop_3@3x.png?ver=3 3x" class="img-fluid">
+                                                    <img src="{{networkData.templatePath}}/static/images/devices.svg?ver=3"  class="img-fluid">
                                                 {% endif %}
                                             </picture>
 
