add link in subscribe today button

--- a/layouts/partials/header/_header.twig
+++ b/layouts/partials/header/_header.twig
@@ -144,7 +144,7 @@
 {# Begin sidebar navigation #}
 
 <div class="c-sidebarMenu">
-    <a href="javascript" class="c-sidebarMenu__subscribe">
+    <a href="/subscriptions" class="c-sidebarMenu__subscribe">
         <span>Subscribe today</span>
         {#<span>
             <img src={{networkData.templatePath}}/static/icons/icons-navigation-arrow.svg />
