--- a/layouts/partials/messages.twig
+++ b/layouts/partials/messages.twig
@@ -2,7 +2,12 @@
 
 {# {% set messages = { "error" : "<div><ul><li>Username can only contain alphanumeric characters.</li><li>Username can only contain alphanumeric characters.</li><li>Username can only contain alphanumeric characters.</li></ul></div>"} %} #}
 {# {% set messages = { "success" : "Your changes have been saved."} %}  #}
+{% set config = _Network.getThemeConfig() %}
 
+{% set themeColor = "#4A90E2" %}
+{% if networkData['styling']['colours']['primaryColor'] is defined %}
+    {% set themeColor = networkData['styling']['colours']['primaryColor'] %}
+{% endif %}
 
 {% for key, message in messages %}
     
@@ -13,7 +18,17 @@
 
     <div class="profile-message profile-message{{textStyle}}" role="alert">
         <a id="message-close" class="profile-message__close" href="#"></a>
-        <div class="profile-message__text">{{message | raw }}</div>
+        <div class="profile-message__text">
+            <span class="icon">
+                <svg width="22" height="22" viewBox="0 0 22 22" xmlns="http://www.w3.org/2000/svg">
+                    <g fill="#5748F6" fill-rule="evenodd">
+                        <path d="M10.945 1.683c-5.107 0-9.26 4.153-9.26 9.26 0 5.104 4.153 9.258 9.26 9.258 5.106 0 9.26-4.153 9.26-9.259 0-5.105-4.154-9.259-9.26-9.259m0 20.202C4.911 21.885 0 16.977 0 10.942.001 4.91 4.91 0 10.945 0 16.979 0 21.89 4.909 21.89 10.943s-4.91 10.942-10.945 10.942"/>
+                        <path d="M10.59 14.154a.906.906 0 0 1-.624-.246l-2.707-2.58a.813.813 0 0 1 0-1.189.914.914 0 0 1 1.25 0l2.081 1.983 5.12-4.876a.917.917 0 0 1 1.25 0 .815.815 0 0 1 0 1.19l-5.745 5.472a.908.908 0 0 1-.625.246"/>
+                    </g>
+                </svg>
+            </span>
+            {{message | raw }}
+        </div>
     </div>
 
 
