--- a/layouts/partials/messages.twig
+++ b/layouts/partials/messages.twig
@@ -2,6 +2,7 @@
 
 {# {% set messages = { "error" : "<div><ul><li>Username can only contain alphanumeric characters.</li><li>Username can only contain alphanumeric characters.</li><li>Username can only contain alphanumeric characters.</li></ul></div>"} %} #}
 {# {% set messages = { "success" : "Your changes have been saved."} %}  #}
+{% set networkData = _Network.getNetworkData() %}
 {% set config = _Network.getThemeConfig() %}
 
 {% set themeColor = "#4A90E2" %}
