--- a/static/sass/cards/_card.scss
+++ b/static/sass/cards/_card.scss
@@ -133,6 +133,7 @@
 
             @media #{$mobile} {
                 @include font-size(18);
+                line-height: 1.33;
             }
         }
 
