--- a/static/sass/cards/_card-1.scss
+++ b/static/sass/cards/_card-1.scss
@@ -138,6 +138,11 @@
             border-bottom: none;
             padding-bottom: 0px;
             margin-bottom: 0px;
+
+            &__heading {
+                @include font-size(14);
+                line-height: 1.43;
+            }
         }
     }
 }
