--- a/static/sass/cards/_card-2.scss
+++ b/static/sass/cards/_card-2.scss
@@ -108,6 +108,11 @@
             border-bottom: none;
             padding-bottom: 0px;
             margin-bottom: 0px;
+
+            &__heading {
+                @include font-size(18);
+                line-height: 1.33;
+            }
             
             &__media {
                 max-height: 185px;
