--- a/static/sass/cards/_card-6.scss
+++ b/static/sass/cards/_card-6.scss
@@ -61,6 +61,8 @@
             margin-bottom: 0px;
 
             &__heading {
+                @include font-size(14);
+                line-height: 1.43;
                 min-height: 72px;
             }
         }
