--- a/static/sass/cards/_card-4.scss
+++ b/static/sass/cards/_card-4.scss
@@ -19,6 +19,11 @@
                 max-height: 185px;
                 min-height: 185px;
             }
+
+            &__heading {
+                @include font-size(14);
+                line-height: 1.33;
+            }
         }
     }
 }
