responsive changes for table view

--- a/static/sass/pages/myaccount/_component.plan-features.scss
+++ b/static/sass/pages/myaccount/_component.plan-features.scss
@@ -36,4 +36,10 @@
         }
     }
 
+    @media screen and (max-width: 567px) {
+      .plan-features__row {
+        @include flexbox;
+        @include flex-direction(column, vertical);
+      }
+    }
   }
